Split prep next day script

--- a/templates/prep_next_day.html
+++ b/templates/prep_next_day.html
@@ -1441,5 +1441,8 @@
   </script>
 
   <script src="{{ url_for('static', filename='js/timeline.js') }}"></script>
-  <script src="{{ url_for('static', filename='js/prep_next_day.js') }}"></script>
+  <script src="{{ url_for('static', filename='js/prep_next_day.config.js') }}"></script>
+  <script src="{{ url_for('static', filename='js/prep_next_day.state.js') }}"></script>
+  <script src="{{ url_for('static', filename='js/prep_next_day.render.js') }}"></script>
+  <script src="{{ url_for('static', filename='js/prep_next_day.actions.js') }}"></script>
 {% endblock %}
